# osrs-flipper

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/plans/: 2025-12-08-osrs-flip-scanner.md  2025-12-09-backtested-simulation-engine.md  2025-12-09-fastapi-localhost-server.md  2025-12-09-instant-spread-convergence.md  2025-12-09-min-roi-dynamic-lookback.md  2025-12-09-monte-carlo-simulation.md  ~$25-12-08-osrs-flip-scanner.md
osrs_flipper/: __init__.py  allocator.py  analyzers.py  api.py  backtest.py  bsr.py  cache.py  cli.py  convergence_analyzer.py  defaults.py  exits.py  features.py  filters.py  history.py  indicators.py  instant_analyzer.py  lookback.py  portfolio.py  regimes.py  scanner.py  scoring.py  simulator.py  spreads.py  tax.py  timeframes.py  utils.py
osrs_flipper/server/: __init__.py  api.py  item_analyzer.py  scanner_service.py
tests/: __init__.py  test_allocator.py  test_analyzers.py  test_api.py  test_backtest.py  test_bsr.py  test_cache.py  test_cli.py  test_convergence_analyzer.py  test_defaults.py  test_e2e_dataflow.py  test_e2e_instant_convergence.py  test_exits.py  test_features.py  test_filters.py  test_history.py  test_indicators.py  test_instant_analyzer.py  test_lookback.py  test_portfolio.py  test_regimes.py  test_scanner.py  test_scoring.py  test_simulator.py  test_spreads.py  test_tax.py  test_timeframes.py  test_utils.py
tests/server/: test_api.py  test_e2e_api.py  test_item_analyzer.py  test_scanner_service.py
