[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osrs-flipper"
version = "0.1.0"
description = "OSRS Grand Exchange flip scanner and portfolio optimizer"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
]

[project.scripts]
osrs-flip = "osrs_flipper.cli:main"
